Ajoute un feature flag pour les guides

--- a/.env.template
+++ b/.env.template
@@ -87,3 +87,4 @@ GUIDES_GRIST_API_KEY= # Cle API GRIST, générer une clé API en se rendant sur 
 # Feature flags
 FEATURE_FLAG_FILTRES_COMPARAISON= # Active les filtres sur l’onglet comparaison
 FEATURE_FLAG_AVIS_UTILISATEUR= # Active la dialogue de demande d'avis utilisateur (valeurs possibles : true | false)
+FEATURE_FLAG_GUIDES= # Active la section des guides sur le catalogue
