--- a/recuperation-guides/package.json
+++ b/recuperation-guides/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "csv-writer": "^1.6.0",
-    "node-html-parser": "^7.0.1"
+    "node-html-parser": "^7.0.1",
+    "sharp": "^0.34.5"
   }
 }
