[GUIDES] Expose des adresses images de différentes

--- a/.env.template
+++ b/.env.template
@@ -88,3 +88,6 @@ GUIDES_GRIST_API_KEY= # Cle API GRIST, générer une clé API en se rendant sur 
 FEATURE_FLAG_FILTRES_COMPARAISON= # Active les filtres sur l’onglet comparaison
 FEATURE_FLAG_AVIS_UTILISATEUR= # Active la dialogue de demande d'avis utilisateur (valeurs possibles : true | false)
 FEATURE_FLAG_GUIDES= # Active la section des guides sur le catalogue
+
+# Cellar
+CELLAR_URL= # L'url du cellar MSC (Ex: https://messervicescyber-ressources.cellar-c2.services.clever-cloud.com)
