[CACHE GRIST] Ajoute une variable d'environnement pour le cache

--- a/.env.template
+++ b/.env.template
@@ -83,6 +83,7 @@ FINANCEMENTS_GRIST_API_KEY= # Cle API GRIST, générer une clé API en se rendan
 # Guides
 GUIDES_GRIST_URL= # Lien du document grist vers le référentiel des financements en cybersécurité
 GUIDES_GRIST_API_KEY= # Cle API GRIST, générer une clé API en se rendant sur https://grist.numerique.gouv.fr/o/docs/account
+GUIDES_GRIST_DUREE_CACHE_EN_SECONDES= # Durée de mise en cache des guides en secondes (300 secondes / 5 minutes par défaut)
 
 # Feature flags
 FEATURE_FLAG_FILTRES_COMPARAISON= # Active les filtres sur l’onglet comparaison
