--- a/front/lib-svelte/package.json
+++ b/front/lib-svelte/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "build": "vite build",
     "watch": "vite build -w --minify false",
-    "test": "npm run typecheck && npx eslint . && vitest --run",
-    "lint": "npx eslint .",
-    "lint:fix": "npx eslint . --fix",
+    "test": "npm run typecheck && eslint . && vitest --run",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "typecheck": "tsc --noEmit && svelte-check"
   },
   "devDependencies": {
