Change le format des variables Cellar
...afin de séparer le nom du bucket du reste de l'URL

--- a/.env.template
+++ b/.env.template
@@ -91,4 +91,7 @@ FEATURE_FLAG_AVIS_UTILISATEUR= # Active la dialogue de demande d'avis utilisateu
 FEATURE_FLAG_GUIDES= # Active la section des guides sur le catalogue
 
 # Cellar
-CELLAR_URL= # L'url du cellar MSC (Ex: https://messervicescyber-ressources.cellar-c2.services.clever-cloud.com)
+CELLAR_URL= # Le template d'url du cellar MSC (Ex: https://%BUCKET%.cellar-c2.services.clever-cloud.com)
+CELLAR_BUCKET_RESSOURCES_CYBER= # Le nom du bucket des ressources cyber, qui viendra remplacer le %BUCKET% de CELLAR_URL
+CELLAR_BUCKET_GUIDES= # Le nom du bucket des guides, qui viendra remplacer le %BUCKET% de CELLAR_URL
+CELLAR_BUCKET_VISAS= # Le nom du bucket des visas, qui viendra remplacer le %BUCKET% de CELLAR_URL
