[SECU] Restreint la résolution des versions
...aux révisions uniquement

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "private": true,
   "devDependencies": {
-    "concurrently": "^9.2.1",
-    "tsx": "^4.19.3",
-    "vitest": "^3.0.5"
+    "concurrently": "~9.2.1",
+    "tsx": "~4.19.3",
+    "vitest": "~3.0.5"
   },
   "workspaces": [
     "back",
