--- a/back/package.json
+++ b/back/package.json
@@ -13,42 +13,42 @@
   },
   "private": true,
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/cookie-session": "^2.0.49",
-    "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.13.4",
-    "@types/supertest": "^6.0.3",
-    "eslint": "^9.39.1",
-    "node-mocks-http": "^1.16.2",
+    "@eslint/js": "~9.39.1",
+    "@types/cookie-parser": "~1.4.8",
+    "@types/cookie-session": "~2.0.49",
+    "@types/express": "~5.0.1",
+    "@types/jsonwebtoken": "~9.0.9",
+    "@types/node": "~22.13.4",
+    "@types/supertest": "~6.0.3",
+    "eslint": "~9.39.1",
+    "node-mocks-http": "~1.16.2",
     "prettier": "3.3.3",
-    "supertest": "^7.1.4",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.1",
-    "vitest": "^3.0.5"
+    "supertest": "~7.1.4",
+    "tsx": "~4.19.3",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "~8.29.1",
+    "vitest": "~3.0.5"
   },
   "dependencies": {
-    "@lab-anssi/lib": "^2.1.3",
-    "@sentry/node": "^7.120.3",
-    "@types/bcrypt": "^5.0.2",
-    "axios": "^1.13.2",
-    "bcrypt": "^6.0.0",
-    "cookie-parser": "^1.4.7",
-    "cookie-session": "^2.1.1",
-    "express": "^4.21.2",
-    "express-ipfilter": "^1.3.2",
-    "express-rate-limit": "^7.5.1",
-    "express-validator": "^7.3.0",
-    "helmet": "^8.1.0",
-    "html-entities": "^2.6.0",
-    "jsonwebtoken": "^9.0.2",
-    "knex": "^3.1.0",
-    "openid-client": "^5.7.1",
-    "p-throttle": "^7.0.0",
-    "pg": "^8.16.3",
-    "uuid": "^11.1.0"
+    "@lab-anssi/lib": "~2.1.3",
+    "@sentry/node": "~7.120.3",
+    "@types/bcrypt": "~5.0.2",
+    "axios": "~1.13.2",
+    "bcrypt": "~6.0.0",
+    "cookie-parser": "~1.4.7",
+    "cookie-session": "~2.1.1",
+    "express": "~4.21.2",
+    "express-ipfilter": "~1.3.2",
+    "express-rate-limit": "~7.5.1",
+    "express-validator": "~7.3.0",
+    "helmet": "~8.1.0",
+    "html-entities": "~2.6.0",
+    "jsonwebtoken": "~9.0.2",
+    "knex": "~3.1.0",
+    "openid-client": "~5.7.1",
+    "p-throttle": "~7.0.0",
+    "pg": "~8.16.3",
+    "uuid": "~11.1.0"
   },
   "directories": {
     "test": "tests"
