--- a/front/lib-svelte/package.json
+++ b/front/lib-svelte/package.json
@@ -13,28 +13,28 @@
     "typecheck": "tsc --noEmit && svelte-check"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^5.1.1",
-    "@tsconfig/svelte": "^5.0.4",
-    "@types/qrcode": "^1.5.5",
-    "eslint": "^9.39.1",
-    "eslint-plugin-svelte": "^3.5.1",
-    "globals": "^16.0.0",
+    "@sveltejs/vite-plugin-svelte": "~5.1.1",
+    "@tsconfig/svelte": "~5.0.4",
+    "@types/qrcode": "~1.5.5",
+    "eslint": "~9.39.1",
+    "eslint-plugin-svelte": "~3.5.1",
+    "globals": "~16.0.0",
     "prettier": "3.3.3",
-    "prettier-plugin-svelte": "^3.3.3",
-    "sass": "^1.93.3",
-    "svelte": "^5.25.8",
-    "svelte-check": "^4.1.5",
-    "tslib": "^2.8.1",
+    "prettier-plugin-svelte": "~3.3.3",
+    "sass": "~1.93.3",
+    "svelte": "~5.25.8",
+    "svelte-check": "~4.1.5",
+    "tslib": "~2.8.1",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.29.1",
-    "vite": "^6.4.1",
-    "vitest": "^3.0.5",
-    "vitest-localstorage-mock": "^0.1.2"
+    "typescript-eslint": "~8.29.1",
+    "vite": "~6.4.1",
+    "vitest": "~3.0.5",
+    "vitest-localstorage-mock": "~0.1.2"
   },
   "dependencies": {
-    "axios": "^1.13.2",
-    "dompurify": "^3.2.6",
-    "qrcode": "^1.5.4"
+    "axios": "~1.13.2",
+    "dompurify": "~3.2.6",
+    "qrcode": "~1.5.4"
   },
   "main": "svelte.config.js",
   "directories": {
