--- a/front/lib-svelte/package.json
+++ b/front/lib-svelte/package.json
@@ -16,6 +16,7 @@
     "@sveltejs/vite-plugin-svelte": "~5.1.1",
     "@tsconfig/svelte": "~5.0.4",
     "@types/qrcode": "~1.5.5",
+    "@eslint/js": "~9.39.1",
     "eslint": "~9.39.1",
     "eslint-plugin-svelte": "~3.5.1",
     "globals": "~16.0.0",
