--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "migre-bdd": "node --env-file=.env --import tsx ./back/node_modules/knex/bin/cli.js migrate:latest --knexfile back/knexfile.ts",
     "migre-bdd-clever": "node back/node_modules/knex/bin/cli.js migrate:latest --knexfile dist-back/knexfile.js",
-    "dev": "concurrently -n \"SERVEUR,SVELTE,JEKYLL,BDD,MIGRE\" --prefix-colors \"cyan,green,magenta,blue,yellow\" \"node --watch --import tsx --env-file .env ./back/src/serveur.ts\" \"pnpm --filter anssi-portail-svelte watch\" \"sleep 5 && jekyll build -s ./front -d ./front/_site -w\" \"docker compose up db\" \"sleep 3 && pnpm run migre-bdd\"",
-    "start": "pnpm run migre-bdd-clever && node ./dist-back/src/serveur.js",
-    "lint": "pnpm -r --if-present run lint",
-    "test": "pnpm -r --if-present run test",
+    "dev": "concurrently -n \"SERVEUR,SVELTE,JEKYLL,BDD,MIGRE\" --prefix-colors \"cyan,green,magenta,blue,yellow\" \"node --watch --import tsx --env-file .env ./back/src/serveur.ts\" \"pnpm --filter anssi-portail-svelte watch\" \"sleep 5 && jekyll build -s ./front -d ./front/_site -w\" \"docker compose up db\" \"sleep 3 && pnpm migre-bdd\"",
+    "start": "pnpm migre-bdd-clever && node ./dist-back/src/serveur.js",
+    "lint": "pnpm -r lint",
+    "test": "pnpm -r test",
     "admin": "node -e \"const admin = new (require('./dist-back/src/admin/consoleAdministration.js').ConsoleAdministration)()\" -i",
     "admin:dev": "tsc -p back && node --env-file .env -e \"const admin = new (require('./dist-back/src/admin/consoleAdministration.js').ConsoleAdministration)()\" -i"
   },
