--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "main": "serveur.ts",
   "packageManager": "pnpm@10.24.0",
   "scripts": {
-    "migre-bdd": "node --env-file=.env --import tsx ./back/node_modules/knex/bin/cli.js migrate:latest --knexfile back/knexfile.ts",
-    "migre-bdd-clever": "node ./dist-back/node_modules/knex/bin/cli.js migrate:latest --knexfile dist-back/knexfile.js",
+    "admin": "node -e \"const admin = new (require('./back/dist/src/admin/consoleAdministration.js').ConsoleAdministration)()\" -i",
+    "admin:dev": "tsc -p back && node --env-file .env -e \"const admin = new (require('./back/dist/src/admin/consoleAdministration.js').ConsoleAdministration)()\" -i",
+    "build": "pnpm -r build",
     "dev": "concurrently -n \"SERVEUR,SVELTE,JEKYLL,BDD,MIGRE\" --prefix-colors \"cyan,green,magenta,blue,yellow\" \"node --watch --import tsx --env-file .env ./back/src/serveur.ts\" \"pnpm --filter anssi-portail-svelte watch\" \"sleep 5 && jekyll build -s ./front -d ./front/_site -w\" \"docker compose up db\" \"sleep 3 && pnpm migre-bdd\"",
-    "start": "pnpm migre-bdd-clever && node ./dist-back/src/serveur.js",
     "lint": "pnpm -r lint",
     "test": "pnpm --reporter=append-only -r test",
-    "admin": "node -e \"const admin = new (require('./dist-back/src/admin/consoleAdministration.js').ConsoleAdministration)()\" -i",
-    "admin:dev": "tsc -p back && node --env-file .env -e \"const admin = new (require('./dist-back/src/admin/consoleAdministration.js').ConsoleAdministration)()\" -i",
-    "preinstall": "npx only-allow@1.2.2 pnpm"
+    "preinstall": "npx only-allow@1.2.2 pnpm",
+    "migre-bdd": "pnpm --filter anssi-portail-back migre-bdd",
+    "start": "pnpm -r start"
   },
   "repository": {
     "type": "git",
