--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "pnpm --reporter=append-only -r test",
     "migre-bdd": "pnpm --filter @anssi-portail/back migre-bdd",
     "preinstall": "npx only-allow@1.2.2 pnpm",
-    "start": "pnpm --filter @anssi-portail/back start"
+    "start": "node back/dist/src/serveur.js",
+    "prestart": "pnpm --filter @anssi-portail/back prestart"
   },
   "repository": {
     "type": "git",
