--- a/.github/workflows/deploiement.yml
+++ b/.github/workflows/deploiement.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   deploiement-demo-node:
     name: Déploiement en DÉMO (NODE)
-    environment: POC_NODE
+    environment: DEMO_NODE
     runs-on: ubuntu-latest
     steps:
       - name: Cloner le dépôt Git
@@ -73,33 +73,10 @@ jobs:
           git commit -m "Ajoute le site généré"
           clever deploy --force --same-commit-policy=rebuild
 
-  # deploiement-demo:
-  #   name: Déploiement en DÉMO
-  #   environment: DEMO
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Cloner le dépôt Git
-  #       uses: actions/checkout@v4
-  #       with:
-  #         fetch-depth: 0 # Cloner l'intégralité du dépôt, pour ne pas avoir de « shallow repo » rejeté par Clever
-
-  #     - name: Installer la CLI Clever Cloud
-  #       shell: bash
-  #       run: npm install -g clever-tools@4.4.0
-
-  #     - name: Déployer en DÉMO
-  #       env:
-  #         CLEVER_SECRET: ${{ secrets.CLEVER_CLOUD_SECRET }}
-  #         CLEVER_TOKEN: ${{ secrets.CLEVER_CLOUD_TOKEN }}
-  #         ID_APP: ${{ secrets.CLEVER_CLOUD_ID_APP }}
-  #       run: |
-  #         clever link "$ID_APP"
-  #         clever deploy --force --same-commit-policy=rebuild
-
   # deploiement-prod:
   #   needs: [deploiement-demo]
   #   name: Déploiement en PROD
-  #   environment: PROD
+  #   environment: PROD_NODE
   #   runs-on: ubuntu-latest
   #   steps:
   #     - name: Cloner le dépôt Git
