--- a/mise-a-jour-financements/package.json
+++ b/mise-a-jour-financements/package.json
@@ -5,10 +5,13 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "start": "node --import tsx src/index.ts",
+    "start": "node --env-file ../.env --import tsx src/index.ts",
     "test": "node --import tsx --test './tests/**/*.spec.ts'"
   },
   "dependencies": {
     "axios": "~1.13.2"
+  },
+  "devDependencies": {
+    "@types/node": "~22.13.4"
   }
 }
