--- a/mise-a-jour-financements/tsconfig.json
+++ b/mise-a-jour-financements/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "NodeNext",
+    "module": "esnext",
     "outDir": "./dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "noImplicitAny": true,
-    "allowJs": false
+    "allowJs": false,
+    "moduleResolution": "bundler"
   }
 }
