--- a/back/package.json
+++ b/back/package.json
@@ -40,6 +40,7 @@
     "express": "~4.21.2",
     "express-ipfilter": "~1.3.2",
     "express-rate-limit": "~7.5.1",
+    "express-useragent": "~2.0.2",
     "express-validator": "~7.3.0",
     "helmet": "~8.1.0",
     "html-entities": "~2.6.0",
