--- a/mise-a-jour-financements/package.json
+++ b/mise-a-jour-financements/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "start": "node --env-file ../.env --import tsx src/index.ts",
+    "dev": "node --env-file ../.env --env-file .env --import tsx src/index.ts",
     "test": "node --import tsx --test './tests/**/*.spec.ts'"
   },
   "dependencies": {
