--- a/.github/workflows/deploiement-node.yml
+++ b/.github/workflows/deploiement-node.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version-file: '.nvmrc'
+          cache: 'pnpm'
 
       - name: Installe pnpm
         uses: pnpm/action-setup@v4
