--- a/mise-a-jour-financements/package.json
+++ b/mise-a-jour-financements/package.json
@@ -6,12 +6,23 @@
   "type": "module",
   "scripts": {
     "dev": "node --env-file ../.env --env-file .env --import tsx src/index.ts",
-    "test": "node --import tsx --test './tests/**/*.spec.ts'"
+    "lint:fix": "eslint . --fix",
+    "lint": "eslint .",
+    "pretest": "npm-run-all --parallel typecheck lint",
+    "test:ci": "node --import tsx --test './tests/**/*.spec.ts'",
+    "test": "node --import tsx --test './tests/**/*.spec.ts'",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "axios": "~1.13.2"
   },
   "devDependencies": {
-    "@types/node": "~22.13.4"
+    "@eslint/js": "~9.39.1",
+    "@types/node": "~22.13.4",
+    "eslint": "~9.39.1",
+    "npm-run-all2": "^8.0.4",
+    "tsx": "~4.19.3",
+    "typescript-eslint": "~8.29.1",
+    "typescript": "~5.8.3"
   }
 }
