Remonte l'url des nouveaux financements

--- a/mise-a-jour-financements/.env.template
+++ b/mise-a-jour-financements/.env.template
@@ -1,4 +1,5 @@
 # Aides Entreprises API Configuration
+AIDES_ENTREPRISES_URL= # base de l'URL d'Aides Entreprises utilisée pour retrouver les aides
 AIDES_ENTREPRISES_API_URL= # URL de l'API Aides Entreprises (fini par /aides) [voir : https://data.aides-entreprises.fr/api]
 AIDES_ENTREPRISES_API_ID= # Identifiant personnel pour accéder à l'API Aides Entreprises (entête : X-Aidesentreprises-Id)
 AIDES_ENTREPRISES_API_KEY= # Clé personnelle pour accéder à l'API Aides Entreprises (entête : X-Aidesentreprises-Key)
