--- a/mise-a-jour-financements/package.json
+++ b/mise-a-jour-financements/package.json
@@ -14,7 +14,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "axios": "~1.13.2"
+    "axios": "~1.13.2",
+    "diff": "~8.0.2",
+    "picocolors": "~1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "~9.39.1",
@@ -22,7 +24,7 @@
     "eslint": "~9.39.1",
     "npm-run-all2": "^8.0.4",
     "tsx": "~4.19.3",
-    "typescript-eslint": "~8.29.1",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "~8.29.1"
   }
 }
