--- a/mise-a-jour-financements/package.json
+++ b/mise-a-jour-financements/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "~1.13.2",
     "diff": "~8.0.2",
+    "isomorphic-dompurify": "~2.35.0",
     "picocolors": "~1.1.1"
   },
   "devDependencies": {
