--- a/back/package.json
+++ b/back/package.json
@@ -43,10 +43,12 @@
     "@lab-anssi/lib": "~2.1.3",
     "@sentry/node": "~7.120.3",
     "@types/bcrypt": "~5.0.2",
+    "@types/cors": "~2.8.19",
     "axios": "~1.13.2",
     "bcrypt": "~6.0.0",
     "cookie-parser": "~1.4.7",
     "cookie-session": "~2.1.1",
+    "cors": "~2.8.5",
     "express": "~4.21.2",
     "express-ipfilter": "~1.3.2",
     "express-rate-limit": "~7.5.1",
