--- a/demande-diag/tsconfig.node.json
+++ b/demande-diag/tsconfig.node.json
@@ -9,5 +9,5 @@
     "noEmit": false,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts", "vite.config.ts"]
+  "include": ["vite.config.ts"]
 }
