--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,7 @@ CACHE_CONTROL_FICHIERS_STATIQUES= # politique de `cache-control` sur les fichier
 # SERVEUR_TRUST_PROXY = # optionnel (0 par défaut) nombre de proxies en amont du service ou configuration plus fine de trust proxy, Cf.  https://expressjs.com/en/guide/behind-proxies.html
 # SERVEUR_MAX_REQUETES_PAR_MINUTE = # optionnel (600 par défaut) nombre maximum de requêtes par minute par IP
 # SERVEUR_ADRESSES_IP_AUTORISEES = # Seules ces IP seront autorisées. Les autres ne seront pas servies. Séparées par des ',' s'il y en a plusieurs. Supprimer la variable d'env pour désactiver le filtrage.
+# SERVEUR_ROUTES_CACHABLES= # Une liste de regex qui utilisée sur la route courante pour changer les headers de la réponse et la rendre cachable si il y a une correspondance. Ex : '^/visas/,^/assets/'
 
 
 # OIDC
