[SOIN] Controle le durée de cache des stats MAC
...via une variable d'env

--- a/.env.template
+++ b/.env.template
@@ -35,6 +35,7 @@ PROFIL_ANSSI_URL_BASE= # Adresse de base du service MonProfilAnssi
 
 #MON_AIDE_CYBER
 MON_AIDE_CYBER_URL_BASE= # Adresse de base du service MonAideCyber
+MON_AIDE_DUREE_CACHE_STATISTIQUES_EN_SECONDES= # Durée de mise en cache des statistiques de MAC en secondes (300 secondes / 5 minutes par défaut)
 
 #BREVO
 BREVO_API_URL_BASE= # URL de base de l'API Brevo
