[UI-KIT] Déclare l'UI-Kit en tant que peerDependency
...dans le but de centraliser la version de cette dépendance

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,7 +7,7 @@ packages:
   - 'front/lib-svelte'
   - 'recuperation-guides'
   - 'mise-a-jour-financements'
-  - demande-diag
+  - 'demande-diag'
 
 minimumReleaseAge: 10080 # 7 jours (exprimé en minutes)
 preferFrozenLockfile: true
