Initie le projet comparaison-grist

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,6 +8,7 @@ packages:
   - 'recuperation-guides'
   - 'mise-a-jour-financements'
   - 'demande-diag'
+  - 'comparaison-grist'
 
 minimumReleaseAge: 10080 # 7 jours (exprimé en minutes)
 preferFrozenLockfile: true
