--- a/comparaison-grist/package.json
+++ b/comparaison-grist/package.json
@@ -9,7 +9,7 @@
     "node": ">=24.0.0"
   },
   "scripts": {
-    "start:guides": "node src/guides.ts",
+    "start:guides": "node --import tsx --env-file .env src/guides.ts",
     "lint:fix": "eslint . --fix",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit"
@@ -23,6 +23,7 @@
     "@eslint/js": "~9.39.1",
     "@types/node": "~22.13.4",
     "eslint": "~9.39.1",
+    "tsx": "~4.19.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "~8.29.1"
   }
