--- a/.github/workflows/comparaison-grist.yml
+++ b/.github/workflows/comparaison-grist.yml
@@ -1,14 +1,18 @@
-name: Compare des contenus provenant de grist
-run-name: Génère un rapport de différence entre les contenus de 2 documents Grist
+name: Compare des Grist
+run-name: Génère un rapport de différence entre 2 documents Grist
 permissions: {}
 
 on:
   workflow_dispatch: # Pour activer le déclenchement manuel
 
 jobs:
-  genere-differences-guides:
-    name: 'Génère rapport différences guides'
+  genere-tableau-comparatif:
+    name: ${{ matrix.ressource.nom }}
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        ressource:
+          - { nom: 'Les guides', script: 'start:guides' }
     steps:
       - name: Cloner le dépôt Git
         uses: actions/checkout@v4
@@ -27,4 +31,4 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Lance le script de comparaison
-        run: pnpm -F comparaison-grist start:guides
+        run: pnpm -F comparaison-grist ${{ matrix.ressource.script }}
