[COMPARAISON] Utilise l'env github dans la CI
...pour alimenter les variables d'env, plutôt que de charger un fichier local qui n'existe pas en CI

--- a/comparaison-grist/package.json
+++ b/comparaison-grist/package.json
@@ -9,7 +9,8 @@
     "node": ">=24.0.0"
   },
   "scripts": {
-    "start:guides": "node --import tsx --env-file .env src/guides.ts",
+    "dev:guides": "node --import tsx --env-file .env src/guides.ts",
+    "start:guides": "node --import tsx src/guides.ts",
     "lint:fix": "eslint . --fix",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit"
