--- a/.github/workflows/comparaison-grist.yml
+++ b/.github/workflows/comparaison-grist.yml
@@ -32,3 +32,8 @@ jobs:
 
       - name: Lance le script de comparaison
         run: pnpm -F comparaison-grist ${{ matrix.ressource.script }}
+        env:
+          GUIDES_SOURCE_GRIST_URL: ${{ secrets.GUIDES_SOURCE_GRIST_URL }}
+          GUIDES_SOURCE_GRIST_API_KEY: ${{ secrets.GUIDES_SOURCE_GRIST_API_KEY }}
+          GUIDES_CIBLE_GRIST_URL: ${{ secrets.GUIDES_CIBLE_GRIST_URL }}
+          GUIDES_CIBLE_GRIST_API_KEY: ${{ secrets.GUIDES_CIBLE_GRIST_API_KEY }}
