--- a/comparaison-grist/.env.template
+++ b/comparaison-grist/.env.template
@@ -1,5 +1,7 @@
 GUIDES_SOURCE_GRIST_URL= # Lien du document source grist contenant le référentiel des guides
+GUIDES_SOURCE_GRIST_ID_TABLE= # identifiant de la table contenant les guides sources. Ex : Guides_anssi
 GUIDES_SOURCE_GRIST_API_KEY= # Clé API source grist, générer une clé API en se rendant sur https://grist.numerique.gouv.fr/o/docs/account
 
 GUIDES_CIBLE_GRIST_URL= # Lien du document cible grist contenant le référentiel des guides
+GUIDES_CIBLE_GRIST_ID_TABLE= # identifiant de la table contenant les guides cibles. Ex : Guides_anssi
 GUIDES_CIBLE_GRIST_API_KEY= # Clé API cible grist, générer une clé API en se rendant sur https://grist.numerique.gouv.fr/o/docs/account
