[COMPARAISON] Sauvegrade l'empreinte de la source
...afin de s'assurer que les actions suivantes s'appuient sur la même source

--- a/.github/workflows/comparaison-grist.yml
+++ b/.github/workflows/comparaison-grist.yml
@@ -39,3 +39,9 @@ jobs:
           GUIDES_CIBLE_GRIST_URL: ${{ secrets.GUIDES_CIBLE_GRIST_URL }}
           GUIDES_CIBLE_GRIST_ID_TABLE: ${{ secrets.GUIDES_CIBLE_GRIST_ID_TABLE }}
           GUIDES_CIBLE_GRIST_API_KEY: ${{ secrets.GUIDES_CIBLE_GRIST_API_KEY }}
+
+      - name: Sauvegarde l'empreinte source
+        uses: actions/upload-artifact@v4
+        with:
+          name: empreinte-data
+          path: comparaison-grist/empreinte.txt
