--- a/.github/workflows/comparaison-grist.yml
+++ b/.github/workflows/comparaison-grist.yml
@@ -45,3 +45,17 @@ jobs:
         with:
           name: empreinte-data
           path: comparaison-grist/empreinte.txt
+
+  publie-ressources-grist:
+    name: Publie les ressources Grist
+    runs-on: ubuntu-latest
+    needs: genere-tableau-comparatif
+    environment: PROD_NODE
+    steps:
+      - name: Télécharger l'empreinte source
+        uses: actions/download-artifact@v4
+        with:
+          name: empreinte-data
+
+      - name: Affiche l'empreinte source
+        run: cat empreinte.txt
