Desactive temporairement la validation manuelle

--- a/.github/workflows/comparaison-grist.yml
+++ b/.github/workflows/comparaison-grist.yml
@@ -56,7 +56,7 @@ jobs:
     name: Publie ${{ matrix.cible }}
     runs-on: ubuntu-latest
     needs: genere-tableau-comparatif
-    environment: PROD_NODE
+    # environment: PROD_NODE
     strategy:
       matrix:
         cible: ['${{ inputs.cible }}']
