Ajoute une cible par défaut

--- a/.github/workflows/comparaison-grist.yml
+++ b/.github/workflows/comparaison-grist.yml
@@ -9,6 +9,7 @@ on:
         description: 'Cible'
         required: true
         type: choice
+        default: guides
         options:
           - guides
 
