--- a/.github/workflows/comparaison-grist.yml
+++ b/.github/workflows/comparaison-grist.yml
@@ -3,15 +3,12 @@ run-name: Génère un rapport de différence entre 2 documents Grist
 permissions: {}
 
 on:
-  workflow_dispatch: # Pour activer le déclenchement manuel
+  workflow_call:
     inputs:
       cible:
         description: 'Cible'
+        type: string
         required: true
-        type: choice
-        default: guides
-        options:
-          - guides
 
 jobs:
   genere-tableau-comparatif:
