--- a/.github/workflows/grist-deploiement.yml
+++ b/.github/workflows/grist-deploiement.yml
@@ -1,5 +1,5 @@
-name: Compare des Grist
-run-name: Génère un rapport de différence entre 2 documents Grist
+name: Déploie des Grist
+run-name: Compare et déploie des documents Grist
 permissions: {}
 
 on:
@@ -12,7 +12,7 @@ on:
 
 jobs:
   genere-tableau-comparatif:
-    name: Comparaison ${{ inputs.cible }}
+    name: Comparaison
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -50,8 +50,8 @@ jobs:
           name: empreinte-data-${{ matrix.cible }}
           path: comparaison-grist/empreinte.txt
 
-  publie-ressources-grist:
-    name: Publie ${{ matrix.cible }}
+  deploie-ressources-grist:
+    name: Déploiement
     runs-on: ubuntu-latest
     needs: genere-tableau-comparatif
     # environment: PROD_NODE
