--- a/.github/workflows/grist-deploiement.yml
+++ b/.github/workflows/grist-deploiement.yml
@@ -64,8 +64,8 @@ jobs:
       - name: Recopie le contenu
         run: |
           curl --request POST \
-            --url ${{ secrets.TEST_GUIDES_CIBLE_GRIST_URL }}/replace \
-            --header 'authorization: Bearer ${{ secrets.TEST_GUIDES_CIBLE_GRIST_API_KEY }}' \
+            --url ${{ secrets.GUIDES_CIBLE_GRIST_URL }}/replace \
+            --header 'authorization: Bearer ${{ secrets.GUIDES_CIBLE_GRIST_API_KEY }}' \
             --header 'content-type: application/json' \
             --data '{
               "sourceDocId": "${{ env.EMPREINTE }}"
