Lance le workflow manuellement uniquement
...et réactive la validation manuel du job de déploiement

--- a/.github/workflows/grist-deploiement.yml
+++ b/.github/workflows/grist-deploiement.yml
@@ -54,7 +54,7 @@ jobs:
     name: Déploiement
     runs-on: ubuntu-latest
     needs: genere-tableau-comparatif
-    # environment: PROD_NODE
+    environment: PROD_NODE
     strategy:
       matrix:
         cible: ['${{ inputs.cible }}']
