--- a/.github/workflows/grist-deploiement.yml
+++ b/.github/workflows/grist-deploiement.yml
@@ -14,9 +14,6 @@ jobs:
   genere-tableau-comparatif:
     name: Comparaison
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        cible: ['${{ inputs.cible }}']
     steps:
       - name: Cloner le dépôt Git
         uses: actions/checkout@v4
@@ -35,7 +32,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Lance le script de comparaison
-        run: pnpm -F comparaison-grist start:${{ matrix.cible }}:compare
+        run: pnpm -F comparaison-grist start:${{ inputs.cible }}:compare
         env:
           GUIDES_SOURCE_GRIST_URL: ${{ secrets.GUIDES_SOURCE_GRIST_URL }}
           GUIDES_SOURCE_GRIST_ID_TABLE: ${{ secrets.GUIDES_SOURCE_GRIST_ID_TABLE }}
@@ -47,7 +44,7 @@ jobs:
       - name: Sauvegarde l'empreinte source
         uses: actions/upload-artifact@v4
         with:
-          name: empreinte-data-${{ matrix.cible }}
+          name: empreinte-data-${{ inputs.cible }}
           path: comparaison-grist/empreinte.txt
 
   deploie-ressources-grist:
@@ -55,14 +52,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: genere-tableau-comparatif
     environment: PROD_NODE
-    strategy:
-      matrix:
-        cible: ['${{ inputs.cible }}']
     steps:
       - name: Télécharger les empreintes sources
         uses: actions/download-artifact@v4
         with:
-          name: empreinte-data-${{ matrix.cible }}
+          name: empreinte-data-${{ inputs.cible }}
 
       - name: Affiche les empreintes sources
         run: echo EMPREINTE=$(cat empreinte.txt) >> "$GITHUB_ENV"
