[EXIGENCES NIS2] Affiche une page vide

--- a/.env.template
+++ b/.env.template
@@ -89,3 +89,6 @@ CELLAR_URL= # Le template d'url du cellar MSC (Ex: https://%BUCKET%.cellar-c2.se
 CELLAR_BUCKET_RESSOURCES_CYBER= # Le nom du bucket des ressources cyber, qui viendra remplacer le %BUCKET% de CELLAR_URL
 CELLAR_BUCKET_GUIDES= # Le nom du bucket des guides, qui viendra remplacer le %BUCKET% de CELLAR_URL
 CELLAR_BUCKET_VISAS= # Le nom du bucket des visas, qui viendra remplacer le %BUCKET% de CELLAR_URL
+
+# Feature flags
+FEATURE_FLAG_EXIGENCES_NIS2= # true pour activer la navigation vers les exigences NIS2
